--- a/src/index.html
+++ b/src/index.html
@@ -6,23 +6,11 @@
 </head>
 
 <body>
-    <div class="prateleira">
-        <div class="cabecalhoPrateleira"></div>
-        <div class="linhaPrateleira"></div>
-        <div class="linhaPrateleira"></div>
-        <div class="linhaPrateleira"></div>
-        <div class="linhaPrateleira"></div>
-        <div class="rodapePrateleira"></div>
+    <div class="botoes-dificuldade">
+        <button class="custom-btn" onclick="location.replace('easy.html')">Fácil</button>
+        <button class="custom-btn">Médio</button>
+        <button class="custom-btn">Difícil</button>
     </div>
-    <div id="jogo">
-        <div id="elemento"></div>
-        <div id="resposta">
-            <input class="botao-esquerda" type="button" value="Esquerda" onclick="escolheOpcao('E')">
-            <input class="botao-direita" type="button" value="Direita" onclick="escolheOpcao('D')">
-        </div>
-    </div>
-
-    <script src="scripts.js"></script>
 </body>
 
 </html>
