--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,9 @@
 </head>
 
 <body>
+    <div class="titulo">
+        Sorting Game
+    </div>
     <div class="botoes-dificuldade">
         <button class="custom-btn" onclick="location.replace('easy.html')">Fácil</button>
         <button class="custom-btn">Médio</button>
