Balão de instruções

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,19 @@
     <div class="titulo">
         Sorting Game
     </div>
+    <div class="texto-explicativo">
+        <h3>Como jogar:</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras vitae erat malesuada, rutrum nisl a, pretium augue. Integer lacinia tortor nisi, quis finibus nisl faucibus vel. Morbi efficitur scelerisque orci auctor tincidunt. Donec quis suscipit
+            enim, eu volutpat purus. Suspendisse vel urna commodo, iaculis justo id, fringilla dolor. In faucibus efficitur purus, eu ullamcorper neque molestie et. Duis augue ex, tincidunt vel risus eu, vehicula porta nisl. Cras euismod magna urna, facilisis
+            rhoncus urna consectetur ac. Sed non elit sit amet eros finibus ultrices eget ut libero. Duis pulvinar sit amet dui eget sollicitudin. Morbi eget nunc justo.</p>
+        <p>Vivamus hendrerit blandit fermentum. Sed consequat quam nec volutpat scelerisque. Duis rutrum volutpat suscipit. Etiam eu metus a velit fermentum pharetra et id ante. Vivamus pretium viverra lectus, eget blandit augue. Maecenas ex mauris, pretium
+            nec auctor sit amet, interdum nec mauris. Duis augue lacus, vehicula at auctor eu, interdum vitae quam. Integer scelerisque, nibh id auctor posuere, justo augue ultricies arcu, nec auctor sem nisl eu magna. In ultricies, risus nec euismod
+            feugiat, ipsum eros mollis elit, ut fringilla quam arcu quis ante. Aliquam non purus enim. Vestibulum tempor, arcu a dapibus maximus, ligula ipsum iaculis velit, id imperdiet odio leo eget ipsum. Donec in aliquet justo.</p>
+        <p>Proin sit amet lacus a arcu molestie gravida suscipit id nibh. Morbi fermentum diam neque, vel maximus arcu interdum ut. Aenean tincidunt laoreet malesuada. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
+            Sed dignissim, orci sit amet porta consectetur, lectus orci dignissim nibh, ut porta mi ipsum vitae nulla. Etiam imperdiet lorem et molestie pulvinar. Morbi ac lacus leo. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere
+            cubilia curae; Donec lectus quam, pellentesque sit amet imperdiet vitae, pretium id felis. Aenean semper tortor non venenatis aliquam. Donec suscipit ex vitae velit volutpat dignissim. Pellentesque vitae tempus lectus. Donec molestie sem in
+            tempor gravida. Suspendisse quam ipsum, volutpat at mi non, semper laoreet felis. Nam sit amet molestie magna. Sed non tincidunt massa, consequat tincidunt elit.</p>
+    </div>
     <div class="botoes-dificuldade">
         <button class="custom-btn" onclick="location.replace('easy.html')">Fácil</button>
         <button class="custom-btn">Médio</button>
