--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
     </div>
     <div class="botoes-dificuldade">
         <button class="custom-btn" onclick="location.replace('easy.html')">Fácil</button>
-        <button class="custom-btn">Médio</button>
+        <button class="custom-btn" onclick="location.replace('medium.html')">Médio</button>
         <button class="custom-btn">Difícil</button>
     </div>
 </body>
