--- a/src/medium.html
+++ b/src/medium.html
@@ -1,16 +1,11 @@
 <html>
 
 <head>
-    <title>Sorting Game - Fácil</title>
-    <link rel="stylesheet" href="easyStyles.css">
+    <title>Sorting Game - Médio</title>
+    <link rel="stylesheet" href="mediumStyles.css">
 </head>
 
 <body>
-    <div id="balao-alerta">
-        <h3>
-
-        </h3>
-    </div>
     <div class="prateleira">
         <div class="cabecalhoPrateleira"></div>
         <div class="linhaPrateleira"></div>
@@ -31,7 +26,7 @@
         </div>
     </div>
 
-    <script src="easyScripts.js"></script>
+    <script src="mediumScripts.js"></script>
 </body>
 
 </html>
