Alertas de erros e acertos

--- a/src/medium.html
+++ b/src/medium.html
@@ -6,6 +6,12 @@
 </head>
 
 <body>
+    <div id="balao-alerta">
+        <h3>
+
+        </h3>
+    </div>
+
     <div class="prateleira">
         <div class="cabecalhoPrateleira"></div>
         <div class="linhaPrateleira"></div>
