--- a/src/medium.html
+++ b/src/medium.html
@@ -22,10 +22,12 @@
     </div>
     <div id="jogo">
         <div id="elemento"></div>
-        <!-- <div id="resposta">
+        <div id="botoes">
+            <input class="botao-voltar" type="button" value="Voltar para o menu" onclick="location.replace('easy.html')">
             <input class="botao-esquerda" type="button" value="Esquerda" onclick="escolheOpcao('E')">
             <input class="botao-direita" type="button" value="Direita" onclick="escolheOpcao('D')">
-        </div> -->
+            <input class="botao-reiniciar" type="button" value="Reiniciar" onclick="start()">
+        </div>
         <div id="pontuacao">
             <span>Pontuação: </span>
             <span id="pontuacaoContainer"></span>
