--- a/src/hard.html
+++ b/src/hard.html
@@ -6,6 +6,11 @@
 </head>
 
 <body>
+    <div id="balao-alerta">
+        <h3>
+
+        </h3>
+    </div>
     <div class="prateleira">
         <div class="cabecalhoPrateleira"></div>
         <div class="linhaPrateleira"></div>
@@ -25,7 +30,16 @@
             <span id="pontuacaoContainer"></span>
         </div>
     </div>
-
+    <div vw class="enabled">
+        <div vw-access-button class="active"></div>
+        <div vw-plugin-wrapper>
+          <div class="vw-plugin-top-wrapper"></div>
+        </div>
+      </div>
+      <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+      <script>
+        new window.VLibras.Widget("https://vlibras.gov.br/app");
+      </script>
     <script src="hardScripts.js"></script>
 </body>
 
