--- a/src/easy.html
+++ b/src/easy.html
@@ -1,37 +1,42 @@
 <html>
-
-<head>
+  <head>
     <title>Sorting Game - Fácil</title>
-    <link rel="stylesheet" href="easyStyles.css">
-</head>
+    <link rel="stylesheet" href="easyStyles.css" />
+  </head>
 
-<body>
+  <body>
     <div id="balao-alerta">
-        <h3>
-
-        </h3>
+      <h3></h3>
     </div>
     <div class="prateleira">
-        <div class="cabecalhoPrateleira"></div>
-        <div class="linhaPrateleira"></div>
-        <div class="linhaPrateleira"></div>
-        <div class="linhaPrateleira"></div>
-        <div class="linhaPrateleira"></div>
-        <div class="rodapePrateleira"></div>
+      <div class="cabecalhoPrateleira"></div>
+      <div class="linhaPrateleira"></div>
+      <div class="linhaPrateleira"></div>
+      <div class="linhaPrateleira"></div>
+      <div class="linhaPrateleira"></div>
+      <div class="rodapePrateleira"></div>
     </div>
     <div id="jogo">
-        <div id="elemento"></div>
-        <!-- <div id="resposta">
+      <div id="elemento"></div>
+      <!-- <div id="resposta">
             <input class="botao-esquerda" type="button" value="Esquerda" onclick="escolheOpcao('E')">
             <input class="botao-direita" type="button" value="Direita" onclick="escolheOpcao('D')">
         </div> -->
-        <div id="pontuacao">
-            <span>Pontuação: </span>
-            <span id="pontuacaoContainer"></span>
-        </div>
+      <div id="pontuacao">
+        <span>Pontuação: </span>
+        <span id="pontuacaoContainer"></span>
+      </div>
     </div>
-
+    <div vw class="enabled">
+      <div vw-access-button class="active"></div>
+      <div vw-plugin-wrapper>
+        <div class="vw-plugin-top-wrapper"></div>
+      </div>
+    </div>
+    <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+    <script>
+      new window.VLibras.Widget("https://vlibras.gov.br/app");
+    </script>
     <script src="easyScripts.js"></script>
-</body>
-
+  </body>
 </html>
