--- a/src/index.html
+++ b/src/index.html
@@ -56,6 +56,11 @@
         <div class="vw-plugin-top-wrapper"></div>
       </div>
     </div>
+
+    <audio class="" autoplay="autoplay" controls="controls">
+        <source src="./music/WhatsApp Audio 2022-11-15 at 20.38.13.mp3" type="audio/mp3" />
+        seu navegador não suporta HTML5
+    </audio>
     <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
     <script>
       new window.VLibras.Widget("https://vlibras.gov.br/app");
