--- a/src/hard.html
+++ b/src/hard.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Sorting Game - Médio</title>
+    <title>Sorting Game - Difícil</title>
     <link rel="stylesheet" href="hardStyles.css">
 </head>
 
