--- a/src/medium.html
+++ b/src/medium.html
@@ -38,13 +38,19 @@
     <div vw class="enabled">
         <div vw-access-button class="active"></div>
         <div vw-plugin-wrapper>
-          <div class="vw-plugin-top-wrapper"></div>
+            <div class="vw-plugin-top-wrapper"></div>
         </div>
-      </div>
-      <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
-      <script>
+    </div>
+    <div>
+        <audio class="" autoplay="autoplay" controls="controls">
+        <source src="./music/musicaFundo.mp3" type="audio/mp3" />
+        seu navegador não suporta HTML5
+    </audio>
+    </div>
+    <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+    <script>
         new window.VLibras.Widget("https://vlibras.gov.br/app");
-      </script>
+    </script>
     <script src="mediumScripts.js"></script>
 </body>
 
